<resources>
    <string name="app_name">MySongApp</string>
    <string name="songs_list_ts_empty">Songs list is empty!</string>
    <string name="author">Author:</string>
    <string name="itunes_songs">Itunes Songs</string>
    <string name="assets_songs">Assets Songs</string>
    <string name="search_song">Search song</string>
    <string name="title">Title:</string>
    <string name="collection_name">Collection:</string>
    <string name="genre_name">Genre:</string>
    <string name="country">Country:</string>
    <string name="release_date">Release:</string>
    <string name="first_label">First:</string>
    <string name="year_label">Year:</string>
    <string name="play_count">Play Count:</string>
    <string name="itunes_menu">Itunes songs</string>
    <string name="assets_menu">Assets songs</string>
    <string name="menu">MENU</string>
    <string name="songs_list_empty">Ooops…! Songs list is empty!</string>
    <string name="error_assets_songs">Error! Could not load songs from assets!</string>
    <string name="server_response_no_body">OOOps, no Itune songs to show! Server response contains no body.</string>
    <string name="error_getting_itune_songs">Error!, Couldn\'t get the Itunes songs! Message:</string>
    <string name="thumbnail">Thumbnail image</string>
    <string name="song_image">Song image</string>
    <string name="intro_dialog_msg">Hi there! To switch between the Itunes and Assets songs lists use the menu above :)</string>
    <string name="introduction">Introduction</string>
    <string name="dismiss">Dismiss</string>
</resources>
